# ROS2-Based-Autonomous-Driving-SW-Camp

./: CITATION.cff  README.md
src/arduino_codes/driving/: driving.ino.hex
src/control_motor/: package.xml  setup.cfg  setup.py
src/control_motor/control_motor/: control_motor_node.py  convert_protocol_node.py  generate_control_signal_node.py
src/data_collection/: change_image_name.py  data_collection.py
src/img_process/: package.xml  setup.cfg  setup.py
src/img_process/img_process/: image_extract_info_node.py  image_postprocess_node.py
src/img_process/img_process/lib/: __init__.py
src/interfaces_pkg/: CMakeLists.txt  package.xml
src/interfaces_pkg/msg/: BoundingBox2D.msg  Detection.msg  DetectionArray.msg  LaneInfo.msg  Mask.msg  Motor.msg
src/load_img/: package.xml  setup.cfg  setup.py
src/load_img/load_img/: camera_publisher_node.py  image_publisher_node.py  image_subscriber_node.py  video_publisher_node.py
src/load_img/load_img/lib/: __init__.py
src/load_img/load_img/lib/Collected_Datasets/: init.txt
src/yolov8_ros/: package.xml  setup.py
src/yolov8_ros/yolov8_ros/: __init__.py  instance_segmentation_node.py
src/yolov8_ros/yolov8_ros/lib/: bestpt_file_path.txt
